force-app/main/default/objects/Counsellor_Profile__c/Counsellor_Profile__c.object-meta.xml
<CustomObject>
    <description>Workbook-defined counsellor profile records.</description>
    <label>Counsellor Profile</label>
    <nameField>
        <displayFormat>CP-{0000}</displayFormat>
        <label>Counsellor Profile Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Counsellor Profiles</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>