force-app/main/default/objects/Counsellor_Profile__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <label>Routing attributes</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>