force-app/main/default/objects/Counsellor_Profile__c/fields/On_Shift__c.field-meta.xml
<CustomField>
    <fullName>On_Shift__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Routing attributes</label>
    <type>Checkbox</type>
</CustomField>