force-app/main/default/objects/Counsellor_Profile__c/fields/Specialty__c.field-meta.xml
<CustomField>
    <fullName>Specialty__c</fullName>
    <label>Routing attributes</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Remission</fullName>
            </value>
            <value>
                <fullName>Insulin users</fullName>
            </value>
            <value>
                <fullName>Prediabetes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>