force-app/main/default/objects/Counsellor_Profile__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <label>Routing attributes</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Routing attributes Records</relationshipLabel>
    <relationshipName>CounsellorProfileUser</relationshipName>
    <type>Lookup</type>
</CustomField>