force-app/main/default/objects/Counsellor_Profile__c/fields/User_Key__c.field-meta.xml
<CustomField>
    <fullName>User_Key__c</fullName>
    <externalId>true</externalId>
    <label>Routing attributes</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>